[package]
name = "fwupd-dbus"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MIT"
description = "fwupd dbus client bindings"
repository = "https://github.com/pop-os/fwupd-dbus"

[dependencies]
async-fs = "1.3.0"
async-io = "1.1"
bitflags = "1.2" 
blocking = "1.0"
cascade = "0.1"
crypto-hash = "0.3"
dbus = "0.8"
futures-lite = "1.4"
hex-view = "0.1"
log = "0.4"
progress-streams = "1.1"
reqwest = { version = "0.10", features = ["blocking"] } 
shrinkwraprs = "0.3"
thiserror = "1.0"
url = "2.1"
xdg = "2.2"

[dev-dependencies]
smol = "0.3"
