[package]
name = "fwupd-dbus"
version = "0.2.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MIT"
description = "fwupd dbus client bindings"
repository = "https://github.com/pop-os/fwupd-dbus"

[dependencies]
base64 = "0.13"
bitflags = "1.2"
cascade = "1.0"
crypto-hash = "0.3"
dbus = "0.9"
hex-view = "0.1"
log = "0.4"
shrinkwraprs = "0.3"
thiserror = "1.0"
ureq = "2.1"
url = "2.2"
xdg = "2.2"
