[package]
name = "fwupd-dbus"
version = "0.2.3"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MIT"
description = "fwupd dbus client bindings"
repository = "https://github.com/pop-os/fwupd-dbus"

[dependencies]
base64 = "0.13.0"
bitflags = "1.3.2"
cascade = "1.0.1"
crypto-hash = "0.3.4"
dbus = "0.9.6"
hex-view = "0.1.3"
log = "0.4.17"
shrinkwraprs = "0.3.0"
thiserror = "1.0.37"
ureq = "2.5.0"
url = "2.3.1"
xdg = "2.4.1"
zbus = "3.2.0"
